Fixed repos alignment

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,7 +7,8 @@
   font-size: 5vw;
 }
 
-.repos {
+.openSource {
+  text-align: center;
+  font-size: 2.5vw;
 }
 
-.repos div {}
