--- a/styles/Repo.module.css
+++ b/styles/Repo.module.css
@@ -1,32 +1,34 @@
 .repo {
-    border: 3px solid white;
-    padding: 1%;
-    margin: 4%;
-    border-radius: 16px;
-    width: 20%;
+  border: 3px solid white;
+  padding: 1%;
+  margin: 4%;
+  border-radius: 16px;
+  width: 20%;
+  float: left;
 }
 
 .repo h1 {
-    font-size: 1.4vw;
+  font-size: 1.4vw;
 }
 
 .repo h2 {
-    font-size: .8vw;
+  font-size: 0.8vw;
 }
 
 .languages {
-    list-style: none;
-    padding-left: 0;
-    padding-top: 2%;
-    overflow: none;
+  list-style: none;
+  padding-left: 0;
+  padding-top: 2%;
+  overflow: none;
 }
 
 .language {
-    display: inline;
-    padding-top: 1%;
-    padding-bottom: 1%;
-    padding-left: 2%;
-    padding-right: 2%;
-    border-radius: 10px;
-    margin: 2%;
+  display: inline;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  padding-left: 2%;
+  padding-right: 2%;
+  border-radius: 10px;
+  margin: 2%;
 }
+
